# Wind-Code

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Introduction.txt  OSTools.py  README.md  agent.py  main.py  pyproject.toml  temp_resume.txt  tools.json  versions.md
Tools/: OSTools.py  TerminalTool.py  base.py
agent/: agent.py  cli.py
agent/prompt/: main.md
agent/tools/: OSTools.py  TerminalTool.py  base.py  tools.json  wind_router.py
agent/utils/: logger.py  version.py
backups/: agent.py  cli.py
prompt/: main.md
tools/: base.py  os_tools.py  terminal_tool.py  tools.json  wind_router.py
utils/: config.py  exceptions.py  logger.py  messages_manager.py  model.py  use_tools.py
utils/prompt/: main.md
